<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RespuestaConfig">

    <TextView
            android:text="@string/Storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="68dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="174dp" android:layout_marginEnd="179dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/textView13" android:textSize="18sp"
            android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView13"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="174dp" android:layout_marginEnd="179dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp" android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/Camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView14"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="174dp" android:layout_marginEnd="179dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp" android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView15"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14" android:layout_marginEnd="179dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="174dp" android:textSize="18sp" android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/Contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView16"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="178dp" android:layout_marginEnd="179dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp" android:textColor="@color/colorAccent"
            app:layout_constraintHorizontal_bias="0.541"/>
</androidx.constraintlayout.widget.ConstraintLayout>