<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="345dp"
            android:layout_height="671dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp">

        <TextView
                android:text="@string/Titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="70dp"
                android:layout_marginStart="16dp" android:textSize="16sp" android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/Storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginEnd="218dp" app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp"
                android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/StorageDescription"
                android:layout_width="221dp"
                android:layout_height="36dp" android:id="@+id/textView3"
                android:layout_marginTop="4dp"
                android:maxLines="2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="88dp" android:layout_marginEnd="218dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.197"
                android:textSize="12sp" android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginEnd="236dp"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
                android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/LocationDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginEnd="172dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="55dp" android:textSize="12sp" android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/Camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginEnd="252dp"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="60dp"
                android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/CameraDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginEnd="180dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="48dp" android:textSize="12sp" android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView8"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginEnd="244dp"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="55dp"
                android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/PhoneDescription"
                android:layout_width="177dp"
                android:layout_height="34dp" android:id="@+id/textView9"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:layout_marginEnd="132dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="70dp" android:textSize="12sp" android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/Contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:layout_marginEnd="232dp"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
                android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/ContactsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                android:layout_marginEnd="160dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp" android:textSize="12sp" android:textColor="#FFFFFF"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swiAlmacenamiento"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginStart="120dp"
                app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginEnd="27dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swiUbicacion"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/swiAlmacenamiento" android:layout_marginStart="168dp"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                android:layout_marginEnd="35dp" app:layout_constraintEnd_toEndOf="parent"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swiCamara"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/swiUbicacion" android:layout_marginStart="184dp"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                android:layout_marginEnd="38dp" app:layout_constraintEnd_toEndOf="parent"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swiTelefono"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/swiCamara" android:layout_marginStart="176dp"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                android:layout_marginEnd="35dp" app:layout_constraintEnd_toEndOf="parent"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/swiContactos"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/swiTelefono" android:layout_marginStart="164dp"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                android:layout_marginEnd="28dp" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnCancelar"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
                android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/swiContactos"
                app:layout_constraintEnd_toStartOf="@+id/btnAceptar" android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="90dp"
                app:layout_constraintVertical_bias="1.0" android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>
        <TextView
                android:text="@string/Accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnAceptar"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@+id/btnCancelar" android:layout_marginEnd="19dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/btnCancelar" android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>